Fixed multiple layout problems for intermediate device sizes. Addoint cursor pointer when hovering on carousel indicators.

--- a/style.css
+++ b/style.css
@@ -94,12 +94,31 @@
     }
   }
 
+.simbotic-intro-container {
+    margin-top: 35px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    padding: 10px;
+}
+
+.simbotic-intro-title {
+    margin-right: 65px;
+    margin-left: 65px;
+}
+
+.simbotic-intro-text {
+    max-width: 600px;
+}
+
 .technologies-container {
+    margin-top: 35px;
     width: 100%; 
     display: flex; 
     justify-content: center; 
     flex-flow: row wrap; 
-    margin-bottom: 25px;
+    margin-bottom: 55px;
 }
 
 .technologies-video {
@@ -122,7 +141,7 @@
 
 .technologies-logos img {
     width: 20%;
-    min-width: 64px;
+    min-width: 44px;
 }
 
 @media (max-width: 1200px) {
@@ -133,4 +152,8 @@
         width: 100%;
         max-width: 800px;
     }
+}
+
+.carousel-indicators li {
+    cursor: pointer;
 }
